<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>

    <!-- Login -->
    <string name="login_sign_up">Sign Up</string>
    <string name="login_log_in">Log In</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_terms">By joining you agree to our <a href="http://www.wolox.com.ar/">Terms &amp; Conditions</a></string>
    <string name="login_empty_form">All fields are required</string>
    <string name="login_invalid_email">Enter a valid email</string>
    <string name="login_invalid_credentials">Email or password are invalid</string>
    <string name="login_wait_a_moment">Please wait&#8230;</string>
    <string name="login_user_no_connected">@string/app_user_not_connected</string>
    <string name="login_user_signing_with_google_account">User logged in with Google account: %1$s</string>

    <!-- Sign up -->
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_join">Join</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_terms_url">http://www.wolox.com.ar/</string>

    <!-- Home -->
    <string name="home_news">News</string>
    <string name="home_profile">Profile</string>
    <string name="home_wolox">Wolox</string>
    <string name="home_news_not_found">Not found news</string>
    <string name="home_youtube_search">YouTube Search</string>
    <string name="home_youtube_no_search_criteria">Please enter a search criteria</string>

    <!-- News detail -->
    <string name="news_detail_new_no_found">New not found</string>
    <string name="news_detail_post">Post</string>

    <string name="app_not_found">No available applications to proceed</string>
    <string name="app_unexpected_error">Oops! Something went wrong.</string>
    <string name="app_unexpected_error_format">Oops! Something went wrong. %1$s</string>
    <string name="app_user_not_connected">It looks like you are no connected, check your connection and try again</string>
    <string name="app_date_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="app_youtube_api_key">AIzaSyDVArRIE2nd63vaH0ovSUXv2IxlUuLgJW0</string>

    <string name="youtube_search">Search</string>
    <string name="youtube_not_found_videos">Not found videos</string>
    <string name="youtube_not_supported_result">The kind of result is not supported yet!</string>
    <string name="youtube_playlist">Playlist</string>
    <string name="youtube_channel">Channel</string>

    <string name="design_placeholder_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec diam ligula, vulputate eu lectus nec, rutrum vulputate neque. Nulla facilisi. Nullam id finibus lorem, at ornare neque.</string>

</resources>
