<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_login_cover_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@drawable/login_cover_gradient"
        app:layout_constraintBottom_toBottomOf="@id/fragment_login_cover_image"
        app:layout_constraintEnd_toEndOf="@id/fragment_login_cover_image"
        app:layout_constraintStart_toStartOf="@id/fragment_login_cover_image"
        app:layout_constraintTop_toTopOf="@id/fragment_login_cover_image" />

    <ImageView
        android:id="@+id/fragment_login_wolox_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_wolox_logo_large"
        app:layout_constraintBottom_toBottomOf="@id/fragment_login_cover_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_cover_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/static_spacing_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_wolox_logo">

        <EditText
            android:id="@+id/fragment_login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fragment_login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/static_spacing_medium"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/fragment_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/static_spacing_medium_extra"
            android:text="@string/login_log_in" />

        <Button
            android:id="@+id/fragment_login_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/static_spacing_medium"
            android:text="@string/login_sign_up"
            android:textColor="@android:color/white"
            android:theme="@style/bg_login_sign_up" />

    </LinearLayout>

    <TextView
        android:id="@+id/fragment_login_conditions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/static_spacing_medium_extra"
        android:gravity="center_horizontal"
        android:text="@string/login_terms"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>